# whisperx-video-pipeline

./: .gitignore  README.md  pipeline.py  pyproject.toml  requirements.txt
src/: __init__.py  audio.py  chapters.py  checkpoint.py  diarize.py  export.py  summarize.py  transcribe.py
tests/: test_chapters.py  test_checkpoint.py  test_export.py  test_summarize.py  test_transcribe.py
