[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisperx-video-pipeline"
version = "0.1.0"
description = "Offline WhisperX pipeline for long video transcription"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
dependencies = [
    "whisperx>=3.1.1",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "tqdm>=4.65.0",
    "pyannote.audio>=3.1.0",
    "langchain>=1.0.0",
    "langchain-openai>=1.0.0",
]

[project.scripts]
whisperx-pipeline = "pipeline:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
